src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Audience__c</fullName>
        <description>Audience field used by Gameplan.</description>
        <label>Audience</label>
        <picklist>
            <picklistValues>
                <fullName>Alliance/ISV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User &amp; Prospects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility - Application Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility – Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility – Reseller T1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility – Reseller T2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Named Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Classified Resellers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless - Application Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless – Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless – Reseller T1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless – Reseller T2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Business Unit field used by Gameplan.</description>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hart Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LaserBand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Printers Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zatar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All BUs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Assesment__c</fullName>
        <description>select high level assessment after campaign is completed</description>
        <label>Campaign Assessment</label>
        <picklist>
            <picklistValues>
                <fullName>Exceeded Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Met Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Meet Expectations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Outcome__c</fullName>
        <description>lessons learned, key take aways, action items, results, analysis and other feedback</description>
        <inlineHelpText>lessons learned, key take aways, action items, results, analysis and other feedback</inlineHelpText>
        <label>Campaign Outcome</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Call_Center_Calls__c</fullName>
        <description>Number of call center calls that were made</description>
        <label>Call Center Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Campaign_Search_Visits__c</fullName>
        <description>Number of visits for the search campaign(s) specified</description>
        <label>Campaign Search Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Email_Bouncebacks__c</fullName>
        <description>Emails sent that have been marked as hard bounces</description>
        <label>Email Bouncebacks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Email_Click_Throughs__c</fullName>
        <description>Number of click-throughs from the emails (direct and redirect links)</description>
        <label>Email Click Throughs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Email_Unsubscribes__c</fullName>
        <label>Email Unsubscribes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Emails_Opened__c</fullName>
        <description>Number of times the emails were opened</description>
        <label>Emails Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Emails_Sent__c</fullName>
        <description>Number of emails sent</description>
        <label>Emails Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Event_Registrations__c</fullName>
        <description>Number of registrations for the events</description>
        <label>Event Registrations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Faxes_Sent__c</fullName>
        <label>Faxes Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Forms_Submitted__c</fullName>
        <description>Number of form submissions</description>
        <label>Forms Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Hypersite_Visits__c</fullName>
        <description>Number of visits to the hypersites</description>
        <label>Hypersite Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Online_Referral_Visits__c</fullName>
        <description>Number of visits for the referral campaign(s) specified</description>
        <label>Online Referral Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Possible_Email_Forwards__c</fullName>
        <description>Number of emails that were possibly forwarded</description>
        <label>Possible Email Forwards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Print_Mail_Sends__c</fullName>
        <description>Number of direct mail pieces that were sent</description>
        <label>Print Mail Sends</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Surveys_Completed__c</fullName>
        <description>Number of surveys completed</description>
        <label>Surveys Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Unique_Email_Visitors__c</fullName>
        <description>Total click-throughs from the email to the client’s website that has Eloqua tracking on it.  The total is then deduplicated by email address.</description>
        <label>Unique Email Visitors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>Geography field used by Gameplan.</description>
        <label>Geography</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Product used by Gameplan.</description>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Data Capture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Connectivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printers – Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printers – Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printers – Kiosk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printers – Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printers - PAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printers - RFID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printers - Tabletop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Readers - RFID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services and Aftermarket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <description>Program Type used by Gameplan.</description>
        <label>Program Type</label>
        <picklist>
            <picklistValues>
                <fullName>Channels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demand Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Intelligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reputation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Enablement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field signifies if the campaign is a sales generated campaign</description>
        <label>Sales Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Code__c</fullName>
        <label>Source Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <picklist>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Mobility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial (Finance)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecommunications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation (Travel)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>